# 418MaxFloProject

./: .gitignore  CMakeLists.txt  LargeTestCaseBuilder.py  README.md
raw_test_files/: rgg_n_2_15_s0.graph
src/: CMakeLists.txt  main.cpp  small1.txt
src/lib/: world.h
src/lib/algorithms/parallel/: dinics_parallel.cpp  dinics_parallel.h  pushrelabel_parallel.cpp  pushrelabel_parallel.h  pushrelabel_parallel1.cpp  pushrelabel_parallel1.h  pushrelabel_parallel2.cpp  pushrelabel_parallel2.h
src/lib/algorithms/sequential/: dinics.cpp  dinics.h  genetic.cpp  genetic.h  pushrelabel.cpp  pushrelabel.h  pushrelabel_parallel.cpp  pushrelabel_parallel.h
tests/: delaunay_n10.txt  delaunay_n11.txt  delaunay_n12.txt  delaunay_n14.txt  delaunay_n15.txt  small1.txt  small2.txt  small3.txt
